--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- Seja bem-vindo ao meu template.
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -175,5 +178,9 @@
     <script src="script.js"></script>
 		<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 		<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+  <footer>
+    <p>&copy 2021 zNaflyy. Todos os Direitos Reservados.</p>
+  </footer>
   </body>
 </html>
